syntax = "proto3";

package stag.identity.person.v1;

import "buf/validate/validate.proto";

option java_package = "com.stag.identity.person.v1";
option java_outer_classname = "PersonServiceProto";
option java_multiple_files = true;

service PersonService {
  rpc GetPersonSimpleProfile (GetPersonSimpleProfileRequest)
      returns (GetPersonSimpleProfileResponse);
}

message GetPersonSimpleProfileRequest {
  int32 person_id = 1 [
    (buf.validate.field).int32.gte = 1
  ];

  string language = 2 [
    (buf.validate.field).string.in = "cs",
    (buf.validate.field).string.in = "en"
  ];
}

message GetPersonSimpleProfileResponse {
  string first_name = 1;
  string last_name = 2;
  optional string title_prefix = 3;
  optional string title_suffix = 4;
  string gender = 5;
}